Fix code overflow

--- a/css/blms.css
+++ b/css/blms.css
@@ -6,8 +6,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-family:  'Archivo Black' ,san-serif;
 }
 
-code {
-	padding:10px
+.codestyle {
+	padding:10px;
+	overflow: scroll;
 }
 
 li {
